--- a/.github/workflows/flujo-reutilizable.yml
+++ b/.github/workflows/flujo-reutilizable.yml
@@ -23,4 +23,4 @@ jobs:
 
       - name: Run a multi-line script
         run: |
-          echo Soy el usuario $(username)
+          echo Soy el usuario ${{ inputs.username }}
